# AED2.LineaProduccion-Simulada

./: CMakeLists.txt  README.md  main.cpp
GUI/: information.cpp  information.h  information.ui  ventanaprincipal.cpp  ventanaprincipal.cpp.autosave  ventanaprincipal.h  ventanaprincipal.h.autosave  ventanaprincipal.ui  ventanaprincipal.ui.autosave
GUI/assets/: resources.qrc
Logica/: Lista.cpp  Lista.cpp.autosave  Lista.h  Lista.h.autosave  Nodo.cpp  Nodo.h  Nodo.h.autosave
